✨ feat: add get user's ducks list endpoint
